[project]
name = "muflux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "hist>=2.10.1",
    "iminuit>=2.32.0",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "mplhep>=1.3.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tqdm>=4.68.3",
    "uncertainties>=3.2.3",
    "uproot>=5.7.4",
]
